--- a/Artigos/Segurança/references.bib
+++ b/Artigos/Segurança/references.bib
@@ -1,25 +1,31 @@
-@book{durkheim1977divisao,
-  title={Da divis{\~a}o do trabalho social},
-  author={Durkheim, {\'E}mile},
-  year={1977},
-  publisher={Martins Fontes}
+@book{livro:tenembaum,
+  title={Modern Operating Systems},
+  author={Tanenbaum, Andrew S},
+  volume={3},
+  year={2008},
+  publisher={Pearson}
 }
-@article{durkheim1977educaccao,
-  title={A educa{\c{c}}{\~a}o como processo socializador: fun{\c{c}}{\~a}o homogeneizadora e fun{\c{c}}{\~a}o diferenciadora},
-  author={Durkheim, Emile},
-  journal={Educa{\c{c}}{\~a}o e sociedade: leituras de sociologia da educa{\c{c}}{\~a}o. S{\~a}o Paulo: Nacional},
-  year={1977}
+@misc{ufmg,
+  author = {UFMG, Universidade Federal de Minas Gerais},
+  title = {Deadlocks},
+  howpublished = {\url{http://homepages.dcc.ufmg.br/~scampos/cursos/so/aulas/aula9.html}},
+  note = {Acessado em: 06/01/2018}
 }
-@article{huntington1997choque,
-  title={O choque de civiliza{\c{c}}{\~o}es},
-  author={Huntington, Samuel and others},
-  journal={Rio de janeiro: Objetiva},
-  year={1997}
+@misc{grafufmg,
+  author = {UFMG, Universidade Federal de Minas Gerais},
+  title = {Algoritmos em Grafos},
+  howpublished = {\url{http://www2.dcc.ufmg.br/livros/algoritmos-edicao2/cap7/transp/completo4/cap7.pdf}},
+  note = {Acessado em: 06/01/2018}
 }
-@book{chiavenato2002teoria,
-  title={Teoria geral da administra{\c{c}}{\~a}o},
-  author={Chiavenato, Idalberto},
-  volume={2},
-  year={2002},
-  publisher={Elsevier Brasil}
+@misc{listadj,
+  author = {UFCG, Universidade Federal de Campina Grande},
+  title = {Representação de Grafos},
+  howpublished = {\url{http://www.dsc.ufcg.edu.br/~abrantes/CursosAnteriores/TG051/Representacao.pdf}},
+  note = {Acessado em: 09/01/2018}
+}
+@misc{matin,
+  author = {UFRGS, Universidade Federal do Rio Grande do Sul},
+  title = {Os Coeficientes do Polinômio Característico da Matriz de Adjacência de Grafos},
+  howpublished = {\url{https://www.lume.ufrgs.br/bitstream/handle/10183/155814/Poster_49770.pdf?sequence=2}},
+  note = {Acessado em: 09/01/2018}
 }
